added an end screen with restart button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="full-screen" style="display: none;">
+        <div id="container">
+            <h1>0</h1>
+            <p>Points</p>
+            <button>Restart</button>
+        </div>
+    </div>
+
+    <h2 id="score"> SCORE: 0 </h2>
+
     <canvas id="canvas"> </canvas>
     <script src="canvas-game.js"></script>
 </body>
