--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <h2 id="score"> SCORE: 0 </h2>
+    <h2 id="score"> SCORE: 0 <br> HIGH SCORE: 0 </h2>
 
     <canvas id="canvas"> </canvas>
     <script src="canvas-game.js"></script>
