--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
     <h2 id="score"> SCORE: 0 <br> HIGH SCORE: 0 </h2>
 
+    <div id="powerups">
+        <h2>ACTIVE POWERUPS</h2>
+        <br>
+        <img src="svgs/invincible.svg" id="invincible">
+        <img src="svgs/slowdown.svg" id="slowdown">
+
+    </div>
+
     <canvas id="canvas"> </canvas>
     <script src="canvas-game.js"></script>
 </body>
